# rikibot_ros1

src/jetson_camera/launch/: jetson_camera.launch
src/jetson_camera/src/: jetson_camera_nodelet.cpp
src/opencv_apps/launch/: camshift.launch  contour_moments.launch  convex_hull.launch  corner_harris.launch  discrete_fourier_transform.launch  edge_detection.launch  face_detection.launch  fback_flow.launch  find_contours.launch  general_contours.launch  goodfeature_track.launch  hls_color_filter.launch  hough_circles.launch  hsv_color_filter.launch  lk_flow.launch  people_detect.launch  phase_corr.launch  pyramids.launch  rgb_color_filter.launch  simple_flow.launch  smoothing.launch  threshold.launch
src/opencv_apps/src/nodelet/: face_recognition_nodelet.cpp
src/rikibot_project/rikibot/: CMakeLists.txt
src/rikibot_project/rikibot/include/: riki_base.h
src/rikibot_project/rikibot/launch/: bringup.launch  camera.launch  move_base.launch  navigate.launch  navigate_teb.launch  rikibot_bluetooth_contorl.launch
src/rikibot_project/rikibot/maps/: house.pgm
src/rikibot_project/rikibot_ai_speech/: CMakeLists.txt  package.xml  req.txt
src/rikibot_project/rikibot_ai_speech/launch/: rikibot_chat.launch  rikibot_speaker_driver.launch  rikibot_speech_ctrl.launch  rikibot_speech_nav.launch  rikibot_summoner.launch
src/rikibot_project/rikibot_ai_speech/nodes/: rikibot_nav.py  rikibot_speaker_node.py  rikibot_speech_chat.py  rikibot_speech_ctrl.py  rikibot_speech_nav.py  rikibot_summoner.py
src/rikibot_project/rikibot_ai_speech/script/: Serial.py
src/rikibot_project/rikibot_alego/: cscope.out
src/rikibot_project/rikibot_ar_track/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_ar_track/launch/: rikibot_ar_astra_camera.launch  rikibot_ar_astra_depth.launch  rikibot_ar_camera.launch  rikibot_ar_d435camera.launch  rikibot_ar_d435depth.launch  rikibot_ar_depth.launch  rikibot_ar_follower.launch  rikibot_ar_tags_cog.launch
src/rikibot_project/rikibot_ar_track/launch/astra/: astra_pro.launch
src/rikibot_project/rikibot_autorace/rikibot_autorace/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_autorace/rikibot_autorace_control/: CMakeLists.txt  package.xml  setup.py
src/rikibot_project/rikibot_autorace/rikibot_autorace_control/launch/: rikibot_control_lane.launch
src/rikibot_project/rikibot_autorace/rikibot_autorace_control/nodes/: control_lane
src/rikibot_project/rikibot_autorace/rikibot_autorace_core/: CMakeLists.txt  package.xml  setup.py
src/rikibot_project/rikibot_autorace/rikibot_autorace_core/launch/: rikibot_autorace_core.launch
src/rikibot_project/rikibot_autorace/rikibot_autorace_core/nodes/: rikibot_autorace_core  rikibot_autorace_trtcore
src/rikibot_project/rikibot_autorace/rikibot_autorace_detect/: CMakeLists.txt  package.xml  setup.py
src/rikibot_project/rikibot_autorace/rikibot_autorace_detect/launch/: rikibot_detect_lane.launch  rikibot_detect_obstacle.launch
src/rikibot_project/rikibot_autorace/rikibot_autorace_detect/nodes/: detect_lane  detect_obstacle
src/rikibot_project/rikibot_autorace/rikibot_autorace_detect/param/lane/: lane.yaml
src/rikibot_project/rikibot_autorace/rikibot_autorace_detect/scripts/: save_img.py
src/rikibot_project/rikibot_deep_car/rikibot_controller/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_deep_car/rikibot_controller/launch/: rikibot_controller.launch
src/rikibot_project/rikibot_deep_car/rikibot_controller/nodes/: rikibot_train_controller.py
src/rikibot_project/rikibot_deep_learning/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_deep_learning/config/: paths.yaml
src/rikibot_project/rikibot_deep_learning/launch/: rikibot_classfiy.launch  rikibot_detect.launch
src/rikibot_project/rikibot_deep_learning/src/: node_detectnet.cpp  node_imagenet.cpp  node_segnet.cpp
src/rikibot_project/rikibot_gesture_detect/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_hand_pose/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_kcf/: CMakeLists.txt  cscope.out  package.xml
src/rikibot_project/rikibot_lidar_follower/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_line_follower/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_line_follower/include/: rikibot_line_detect.hpp
src/rikibot_project/rikibot_line_follower/launch/: camera.launch  rikibot_line.launch
src/rikibot_project/rikibot_line_follower/src/: rikibot_line.cpp  rikibot_line_detect.cpp
src/rikibot_project/rikibot_nav/: CMakeLists.txt  package.xml  setup.py
src/rikibot_project/rikibot_object_follower/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_object_grasp/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_object_trtdetect/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_object_trtdetect/config/: labels.txt  paths.yaml
src/rikibot_project/rikibot_object_trtdetect/launch/: rikibot_object_trtdetect.launch
src/rikibot_project/rikibot_object_trtdetect/src/: image_converter.cpp
src/rikibot_project/rikibot_pid/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_pose/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_qt_app/: CMakeLists.txt  mainpage.dox  package.xml
src/rikibot_project/rikibot_slam_3d/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_slam_3d/calibration/camera_calibration/: camera.yaml
src/rikibot_project/rikibot_slam_3d/config/: mapping.rviz  mapping_d435.rviz  navigation.rviz
src/rikibot_project/rikibot_slam_3d/launch/: gmapping.launch  rikibot_3dmap.launch  rikibot_3dnav.launch  rikibot_astra_bringup.launch  rtabmap.launch  rtabmap_depth.launch  rtabmap_gmapping.launch
src/rikibot_project/rikibot_slam_3d/launch/d435/: rikibot_d435_3dmap.launch  rikibot_d435_bringup.launch  rtabmap_d435_gmapping.launch
src/rikibot_project/rikibot_slam_3d/launch/include/: astra_pro.launch  astrapro.launch
src/rikibot_project/rikibot_tracker_servo/: CMakeLists.txt  package.xml
src/rikibot_project/rikibot_traffic_trtdetect/: CMakeLists.txt  package.xml
(+216 files in other folders)
