<package>
  <name>rikibot_ar_track</name>
  <version>0.1.0</version>

  <description>RIKIBOT AR Tags</description>

  <maintainer email="304050118@qq.com">kevin</maintainer>
  <license>BSD</license>
  <url type="website">http://rikibot.com</url>
  <author email="304050118@qq.com">kevin</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>

</package>
