<?xml version="1.0"?>
<package format="2">
  <name>rikibot_autorace_detect</name>
  <version>1.1.0</version>
  <description>
    Rikirobot ROS packages for feature detection with RC Car Auto
  </description>
  <license>Apache 2.0</license>
  <author email="304050118@qq.com">kevin</author>
  <maintainer email="304050118@qq.com">kevin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>

