<?xml version="1.0"?>
<package>
  <name>rikibot_controller</name>
  <version>1.0.0</version>
  <description>The rikibot_controller package</description>

  <maintainer email="304050118@qq.com">kevin</maintainer>
  <license>BSD</license>
  <url type="website">https://www.rikirobot.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
